# github_analytics

./: Makefile  README.md  pyproject.toml  setup.cfg
authentication/: models.py
base/: urls.py  views.py
github_analytics/: asgi.py  settings.py  wsgi.py
templates/base/: base.html
templates/includes/: header.html
