[tool.poetry]
name = "github_analytics"
version = "0.1.0"
description = ""
authors = ["Andrey Tarakanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-bootstrap5 = "^23.4"
django-i18n = "^1.0.4"
flake8 = "^6.1.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
